# rust-todo-list

./: .gitignore  Cargo.toml  Rocket.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: tasks.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240517_061226_create_tasks_table.rs  m20240521_021114_create_users_table.rs  main.rs
public/: authorization.css  container.css  todo_list.css
src/: main.rs  pool.rs  render_routes.rs  task_routes.rs  user_routes.rs
templates/: base.html.tera  edit_task_form.html.tera  login_page.html.tera  signup_page.html.tera  todo_list.html.tera
