[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-trait = "0.1.80"
entity = { path = "entity" }
migration = { path = "migration" }
rust-argon2 = "1.0.0"
anyhow = "1.0.86"

[dependencies.rocket]
version = "0.5.0"
features = ["json", "secrets"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros",
]
